--- a/Doxx/html/inherits.html
+++ b/Doxx/html/inherits.html
@@ -71,13 +71,13 @@ $(function() {
 <tr><td><img src="inherit_graph_0.png" border="0" usemap="#_chat_window" alt=""/>
 <map name="_chat_window" id="_chat_window">
 <area shape="rect" title=" " alt="" coords="5,5,100,32"/>
-<area shape="rect" href="class_chat_window.html" title=" " alt="" coords="148,31,243,57"/>
+<area shape="rect" href="class_chat_window.html" title="Chat ui class." alt="" coords="148,31,243,57"/>
 <area shape="rect" title=" " alt="" coords="16,56,89,83"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_1.png" border="0" usemap="#rsa" alt=""/>
 <map name="rsa" id="rsa">
-<area shape="rect" href="classrsa.html" title=" " alt="" coords="5,5,45,32"/>
+<area shape="rect" href="classrsa.html" title="Rsa Class." alt="" coords="5,5,45,32"/>
 </map>
 </td></tr>
 </table>
